# pevm

./: Cargo.toml  EVM_LOG_USAGE.md  IN_MEMORY_MODE.md  LICENSE-APACHE  LICENSE-MIT  PROFILING_GUIDE.md  README.md  README_BENCHMARK.md  old_evm.rs
benches/: evm_performance.rs
docs/: PROFILING.md  PROFILING_WINDOWS.md
scripts/: benchmark_performance.ps1  benchmark_performance.sh  profile_with_flamegraph.ps1  profile_with_flamegraph.sh  profile_with_wpt.ps1
src/: lib.rs  main.rs  ress.rs
src/cli/: chainspec.rs  interface.rs  mod.rs
src/cli/debug_cmd/: build_block.rs  execution.rs  in_memory_merkle.rs  merkle.rs  mod.rs
src/cli/evm/: batch_log_store.rs  block_log_store.rs  compression.rs  database_wrappers.rs  file_io.rs  log_reader.rs  log_test.rs  logged_db.rs  mod.rs  profiling.rs  state_log.rs  types.rs
