[package]
name = "pevm"
version = "0.1.0"
edition = "2021"
# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[[bin]]
name = "pevm"
path = "src/main.rs"

[features]
dev = []

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

# Speed up dev builds - enable optimizations for performance-critical dependencies
[profile.dev]
opt-level = 1  # Enable some optimization even in dev mode
incremental = true
debug = true

[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3
hash-db.opt-level = 3
triehash.opt-level = 3
revm.opt-level = 3
revm-primitives.opt-level = 3
revm-interpreter.opt-level = 3
revm-database.opt-level = 3
revm-state.opt-level = 3
revm-bytecode.opt-level = 3
reth-evm.opt-level = 3
reth-revm.opt-level = 3
reth-trie.opt-level = 3
reth-trie-common.opt-level = 3
reth-trie-db.opt-level = 3
reth-trie-parallel.opt-level = 3
reth-execution-types.opt-level = 3
reth-execution-errors.opt-level = 3
reth-chain-state.opt-level = 3
reth-provider.opt-level = 3
reth-db.opt-level = 3
reth-db-api.opt-level = 3
alloy-primitives.opt-level = 3
alloy-consensus.opt-level = 3
alloy-eips.opt-level = 3
keccak.opt-level = 3
sha3.opt-level = 3
sha2.opt-level = 3
blake3.opt-level = 3
rayon.opt-level = 3
parking_lot.opt-level = 3
ahash.opt-level = 3
rustc-hash.opt-level = 3
schnellru.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
lto = "thin"
opt-level = 3

[profile.release]
codegen-units = 16
debug = false
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
debug = 2
inherits = "release"
strip = false

# Make sure debug symbols are in the bench profile
[profile.bench]
inherits = "profiling"

[profile.maxperf]
codegen-units = 1
inherits = "release"
lto = "fat"

[dependencies]
num_cpus = "1.17"

reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
#reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
#reth-blockchain-tree-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-config = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4", default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-db-models = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-engine-service = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-engine-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
#reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ress-protocol = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ress-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-etl = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-invalid-block-hooks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-net-banlist = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4", default-features = false }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-nippy-jar = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-optimism-storage = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4", default-features = false, features = [
    "std",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-prune = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc-api-testing-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-stages = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-static-file = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }

# revm - let reth manage versions
# revm = { version = "23.1.0", default-features = false }
# revm-bytecode = { version = "4.0.0", default-features = false }
# revm-database = { version = "4.0.0", default-features = false }
# revm-state = { version = "4.0.0", default-features = false }
# revm-primitives = { version = "19.0.0", default-features = false }
# revm-interpreter = { version = "19.0.0", default-features = false }
# revm-inspector = { version = "4.0.0", default-features = false }
# revm-context = { version = "4.0.0", default-features = false }
# revm-context-interface = { version = "4.0.0", default-features = false }
# revm-database-interface = { version = "4.0.0", default-features = false }
# op-revm = { version = "4.0.2", default-features = false }

# eth - only keep direct dependencies used in code
alloy-consensus = { version = "1.1.2", default-features = false }
alloy-eips = { version = "1.1.2", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.12", default-features = false, features = ["core-net"] }
alloy-rpc-types = { version = "1.1.2", features = ["eth"], default-features = false }

# op - let reth manage versions
# alloy-op-evm = { version = "0.8.1", default-features = false }
# alloy-op-hardforks = "0.2.0"
op-alloy-rpc-types = { version = "0.22.4", default-features = false }
op-alloy-rpc-types-engine = { version = "0.22.4", default-features = false }
op-alloy-network = { version = "0.22.4", default-features = false }
op-alloy-consensus = { version = "0.22.4", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.22.4", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }

# misc
aquamarine = "0.6"
auto_impl = "1"
backon = { version = "1.2", default-features = false, features = ["std-blocking-sleep", "tokio-sleep"] }
bincode = "1.3"
bitflags = "2.4"
blake3 = "1.8"
hex = "0.4"
boyer-moore-magiclen = "0.2.16"
bytes = { version = "1.5", default-features = false }
cfg-if = "1.0"
clap = "4"
dashmap = "6.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
dirs-next = "2.0.0"
dyn-clone = "1.0.17"
eyre = "0.6"
fdlimit = "0.3.0"
generic-array = "0.14"
humantime = "2.1"
humantime-serde = "1.1"
itertools = { version = "0.14", default-features = false }
linked_hash_set = "0.1"
lz4 = "1.28.1"
brotli = "3.4"
xz2 = "0.1"
modular-bitfield = "0.11.2"
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }
nybbles = { version = "0.3.0", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
parking_lot = "0.12"
paste = "1.0"
rand = "0.9"
rayon = "1.7"
rustc-hash = { version = "2.0", default-features = false }
schnellru = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }
sha2 = { version = "0.10", default-features = false }
shellexpand = "3.0.0"
smallvec = "1"
strum = { version = "0.27", default-features = false }
strum_macros = "0.27"
syn = "2.0"
thiserror = { version = "2.0.0", default-features = false }
tar = "0.4.44"
tracing = { version = "0.1.0", default-features = false }
tracing-appender = "0.2"
url = { version = "2.3", default-features = false }
zstd = "0.13"
byteorder = "1"
mini-moka = "0.10"
tar-no-std = { version = "0.3.2", default-features = false }
miniz_oxide = { version = "0.8.4", default-features = false }

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.19.0" }

# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

# tokio
tokio = { version = "1.44", default-features = false }

# performance profiling
# Unix: 使用 pprof-rs (基于 POSIX 信号)
[target.'cfg(unix)'.dependencies]
pprof = { version = "0.14", features = ["flamegraph"] }

# Windows: 使用基于线程的采样（简化版，不依赖 POSIX）
[target.'cfg(windows)'.dependencies]
inferno = { version = "0.12", default-features = false }
backtrace = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# async
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = "1.8"
hyper-util = "0.1"
pin-project = "1.0"
reqwest = { version = "0.12", default-features = false }
tracing-futures = "0.2"
tower = "0.5"
tower-http = "0.6"

# p2p
discv5 = "0.10"
if-addrs = "0.13"

# rpc
jsonrpsee = "0.26"
jsonrpsee-core = "0.26"
jsonrpsee-server = "0.26"
jsonrpsee-http-client = "0.26"
jsonrpsee-types = "0.26"

# http
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"
jsonwebtoken = "9"
proptest-arbitrary-interop = "0.1.0"

# crypto
enr = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery"] }
# rand 8 for secp256k1
rand_08 = { package = "rand", version = "0.8" }

# for eip-4844
c-kzg = "2.1.5"

# config
toml = "0.8"

# misc-testing
arbitrary = "1.3"
assert_matches = "1.5.0"
criterion = { package = "codspeed-criterion-compat", version = "2.7" }
proptest = "1.9"
proptest-derive = "0.5"
similar-asserts = { version = "1.5.0", features = ["serde"] }
tempfile = "3.23"
test-fuzz = "7"
rstest = "0.24.0"
test-case = "3"

# ssz encoding
ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"

# allocators
#tikv-jemalloc-ctl = "0.6"
#tikv-jemallocator = "0.6"
tracy-client = "0.18.0"
snmalloc-rs = { version = "0.3.7", features = ["build_cc"] }

# TODO: When we build for a windows target on an ubuntu runner, crunchy tries to
# get the wrong path, update this when the workflow has been updated
#
# See: https://github.com/eira-fransham/crunchy/issues/13
crunchy = "0.2.4"
aes = "0.8.1"
ahash = "0.8"
anyhow = "1.0"
bindgen = { version = "0.70", default-features = false }
block-padding = "0.3.2"
cc = "=1.2.15"
cipher = "0.4.3"
comfy-table = "7.0"
concat-kdf = "0.1.0"
convert_case = "0.7.0"
crossbeam-channel = "0.5.13"
crossterm = "0.28.0"
csv = "1.3.0"
ctr = "0.9.2"
data-encoding = "2"
delegate = "0.13"
digest = "0.10.5"
hash-db = "=0.15.2"
hickory-resolver = "0.25.0"
hmac = "0.12.1"
human_bytes = "0.4.1"
indexmap = "2"
interprocess = "2.2.0"
lz4_flex = { version = "0.11", default-features = false }
memmap2 = "0.9.4"
mev-share-sse = { version = "0.5.0", default-features = false }
num-traits = "0.2.15"
page_size = "0.6.0"
parity-scale-codec = "3.2.1"
plain_hasher = "0.2"
pretty_assertions = "1.4"
ratatui = { version = "0.29", default-features = false }
ringbuffer = "0.15.0"
rmp-serde = "1.3"
roaring = "0.10.2"
rolling-file = "0.2.0"
sha3 = "0.10.5"
snap = "1.1.1"
socket2 = { version = "0.5", default-features = false }
sysinfo = { version = "0.37", default-features = false }
tracing-journald = "0.3"
tracing-logfmt = "0.3.3"
tracing-subscriber = { version = "0.3", default-features = false }
triehash = "0.8"
typenum = "1.15.0"
vergen = "9.0.4"
visibility = "0.1.1"
walkdir = "2.3.3"
vergen-git2 = "1.0.5"


inline_colorization = "0.1.6"
